--- a/index-jp.html
+++ b/index-jp.html
@@ -15,7 +15,6 @@
          <a href="#location">Location</a>
 
          <a href="views/elements/reward.html">Reward</a>
-         <a href="lang.html"></a>
          <span style="word-spacing:normal; color:white; font-family:'Annie Use Your Telescope', arial, serif; font-size:20px;">
            Click a link
         </span>
@@ -32,12 +31,14 @@
   <br>
   <br>
   <br>
+  <br>
   <h1>About</h1>
   <div class="intro-container">
-    <h3 >L'entract Has Relaxed And Friendly Atomosphere.</h3>
+    <h3 >楽しさの後の爽やかな余韻.</h3>
     <p>
-      Every dish is a wonder to behold,<br>
-      a perfect combination of ingredients as a celebration of the seasons.
+     季節を映し出す食材達に最もふさわしい調理を駆使し、
+     おだやかに流れる時間の中で、心に残る一皿一皿をテーブルにお届けし、
+     皆様の"特別な日"を演出させていただきます。
     </p>
   </div>
 
@@ -47,6 +48,7 @@
 
 <div id="page2">
   <a id="bussiness-hour" class="smooth"></a>
+  <br>
   <br>
   <br>
   <br>
@@ -62,10 +64,13 @@
   <br>
   <br>
   <br>
+  <br>
   <h1>Menu</h1>
   <p>  </p>
   <div class="weeklySpecials">
-    <h2>Weekly Specials</h2>
+    <br>
+    <br>
+    <h2 class="week">今週の一品</h2>
     <table class="style-table"  align="center">
         <tr>
             <td>
@@ -106,7 +111,7 @@
     </table>
   </div>
   <div class="seasonalItem">
-    <h2>Seasonal Items</h2>
+    <h2>季節の一品</h2>
     <table class="style-table"  align="center">
         <tr>
             <td>
@@ -143,10 +148,11 @@
   <br>
   <br>
   <br>
+  <br>
   <h1>Store Location</h1>
   <div class="map">
     <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
-    <div style='overflow:hidden;height:440px;width:1000px;'>
+    <div style='overflow:hidden;height:440px;width:700px;'>
       <div id='gmap_canvas' style='height:440px;width:700px;'></div>
       <style>#gmap_canvas img{max-width:none!important;background:none!important;}</style>
     </div> <a href='http://maps-generator.com/it'>Pagina principale</a>
