--- a/index-jp.html
+++ b/index-jp.html
@@ -15,6 +15,7 @@
          <a href="#location">Location</a>
 
          <a href="views/elements/reward.html">Reward</a>
+         <a hreflang="en">English</a>
          <span style="word-spacing:normal; color:white; font-family:'Annie Use Your Telescope', arial, serif; font-size:20px;">
            Click a link
         </span>
