--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
   <br>
   <br>
   <h1>Bussiness Hours</h1>
+  <p class="buss">
+      <h2>--Lunch Time--</h2><h3>11:30AM - 14:00PM</h3><br>
+      <h2>--Dinner Time--</h2><h3>17:30AM - 21:30PM</h3><br>
 
-  <p></p>
+  </p>
 </div>
 
 <div id="page3">
