--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <div id="header">
   <div id="nav">
      <ul>
-         <a href="#about">About</a>
-         <a href="#bussiness-hour">Bussiness Hour</a>
-         <a href="#menu">Menu</a>
-         <a href="#location">Location</a>
+         <a href="#about"><?php echo _("About"); ?></a>
+         <a href="#bussiness-hour"><?php echo _("Bussiness Hour"); ?></a>
+         <a href="#menu"><?php echo _("Menu"); ?></a>
+         <a href="#location"><?php echo _("Location"); ?></a>
 
          <a href="views/elements/reward.html">Reward</a>
          <a href="lang.html"></a>
@@ -151,7 +151,7 @@
     <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
     <div style='overflow:hidden;height:440px;width:1000px;'>
       <div id='gmap_canvas' style='height:440px;width:700px;'></div>
-      <style>#gmap_canvas img{max-width:none!important;background:none!important;}</style>
+      <style>#gmap_canvas img{max-width:none!important; background:none!important;}</style>
     </div> <a href='http://maps-generator.com/it'>Pagina principale</a>
     <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=48fb00e165ce041424725616b4dc672dc1d7ca87'></script>
     
