--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 
                     </a>
                     <div class="desc">
-                        <p>Add a description of the image here</p>
+                        <p>
+                        Add a description of the image here
+                        </p>
                     </div>
                 </div>
             </td>
